# weather_api

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  weather.py
app/factories/: boto3_client_factory.py
app/repositories/: dynamodb_repository.py  s3_repository.py
app/services/: weather_service.py
