[tool.poetry]
name = "weather-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "weather_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
aiohttp = "^3.10.5"
aioboto3 = "^13.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
